--- a/exercice5Id.css
+++ b/exercice5Id.css
@@ -1,28 +1,28 @@
+body{
+    font-family: "Raleway";
+    background-color: #dcd6f7;
+}
+
 .exercice{
   font-family: "Raleway";
-  color: black;
-  background-color: grey;
-
+  color: white;
+  background-color: #26547c;
   display: block;
   width: 100%;
-  height: 120px;
+  height: 140px;
   text-align: center;
   margin: auto;
   padding-top: 15px;
 }
 
 p{
-  font-size: 12px;
-}
-
-h1{
-  font-size: 20px;
+  font-size: 18px;
 }
 
 form{
   font-family: "Raleway";
   color: white;
-  background-color: blue;
+  background-color: #ef476f;
   display: block;
   width: 100%;
   height: 150px;
@@ -41,6 +41,6 @@ background-color: yellow;
 font-family: "Raleway";
 }
 button:hover {
-  background-color: blue;
-  color : yellow;
+  background-color: #dcd6f7;
+  color : white;
 }
